@@ -100,19 +100,19 @@ public class HomeTimelineService {
       if (toDelete != null) {
         entries.remove(toDelete);
       }
+      homeTimelineEntity.setEntries(entries);
       homeTimelineRepository.updateModel(
           homeTimelineEnityToModel.convertNotNull(homeTimelineEntity));
     }
   }
 
   public void homeTimelineAdd(PostAggregate postAggregate) {
-    List<HomeTimelineModel> hometimelinesModel =
-        homeTimelineRepository.getHomeTimelineContainingUserId(postAggregate.getOwnerId());
-    for (HomeTimelineModel homeTimelineModel : hometimelinesModel) {
+    List<HomeTimelineModel> homeTimelinesModel =
+        homeTimelineRepository.getHomeTimelineContainingUserId(postAggregate.getOwnerId(), "0");
+    for (HomeTimelineModel homeTimelineModel : homeTimelinesModel) {
       if (homeTimelineModel.getBlockedUsersId().contains(postAggregate.getOwnerId())) {
         continue;
       }
-
       HomeTimelineEntity homeTimelineEntity =
           homeTimelineModelToEntity.convertNotNull(homeTimelineModel);
       List<HomeTimelineEntity.HomeTimelineEntryEntity> entries = homeTimelineEntity.getEntries();
@@ -125,14 +125,13 @@ public class HomeTimelineService {
               .withType(postAggregate.getMedia())
               .withTimestamp(LocalDateTime.now());
       entries.add(toAdd);
+      homeTimelineEntity.setEntries(entries);
       homeTimelineRepository.updateModel(
           homeTimelineEnityToModel.convertNotNull(homeTimelineEntity));
     }
   }
 
   public void handleFollow(String userId, String followerId) {
-    logger.info(
-        "received follow with user id: %s and follower id: %s".formatted(userId, followerId));
     Optional<HomeTimelineModel> homeTimeline = homeTimelineRepository.findByUserId(userId);
     if (homeTimeline.isPresent()) {
       HomeTimelineModel homeTimelineModel = homeTimeline.get();
@@ -149,33 +148,35 @@ public class HomeTimelineService {
 
   public void handleUnfollow(String userId, String followerId) {
     Optional<HomeTimelineModel> homeTimeline = homeTimelineRepository.findByUserId(userId);
+
     if (homeTimeline.isPresent()) {
       HomeTimelineModel homeTimelineModel = homeTimeline.get();
       HomeTimelineEntity homeTimelineEntity =
           homeTimelineModelToEntity.convertNotNull(homeTimelineModel);
+
       List<String> followers = homeTimelineEntity.getFollowersId();
-      if (followers.contains(followerId)) {
-        followers.remove(followerId);
-      }
+      followers.remove(followerId);
+
       homeTimelineEntity.setFollowersId(followers);
       List<HomeTimelineEntity.HomeTimelineEntryEntity> newEntries =
           homeTimelineEntity.getEntries().stream()
-              .filter(entry -> entry.getAuthorId().equals(followerId))
-              .collect(Collectors.toList());
-      homeTimelineEntity.setEntries(newEntries);
-      for (HomeTimelineEntity.HomeTimelineEntryEntity homeTimelineEntryEntity :
-          homeTimelineEntity.getEntries()) {
-        if (homeTimelineEntryEntity.getLikedBy().contains(followerId)) {
+              .filter(entry -> !entry.getAuthorId().equals(followerId))
+              .toList();
+      for (HomeTimelineEntity.HomeTimelineEntryEntity homeTimelineEntryEntity : newEntries) {
+        if (homeTimelineEntryEntity.getLikedBy().stream()
+            .anyMatch(likedBy -> likedBy.getUserId().equals(followerId))) {
           homeTimelineEntryEntity.setLikedBy(
               homeTimelineEntryEntity.getLikedBy().stream()
                   .filter(likedBy -> !likedBy.equals(followerId))
                   .collect(Collectors.toList()));
         }
       }
+      homeTimelineEntity.setEntries(
+          newEntries.stream().filter(entry -> entry.getLikedBy().size() != 0).toList());
       homeTimelineRepository.updateModel(
           homeTimelineEnityToModel.convertNotNull(homeTimelineEntity));
     } else {
-      // FIXME Shouldn't happen handle error
+      logger.error("user %s does not exist".formatted(userId));
     }
   }
 
@@ -189,33 +190,10 @@ public class HomeTimelineService {
         blockedUsers.add(blockedUserId);
       }
       homeTimelineModel.setBlockedUsersId(blockedUsers);
-
-      List<HomeTimelineModel.HomeTimelineEntryModel> entries =
-          homeTimelineModel.getEntries().stream()
-              .filter(entry -> !entry.getAuthorId().equals(blockedUserId))
-              .toList();
-
-      entries.forEach(
-          entry -> {
-            entry.setLikedBy(
-                entry.getLikedBy().stream()
-                    .filter(likedBy -> !likedBy.getUserId().equals(blockedUserId))
-                    .toList());
-            if (entry.getLikedBy().isEmpty()
-                && !homeTimelineModel.getFollowersId().contains(entry.getAuthorId())) {
-              entries.remove(entry);
-            }
-          });
-
-      homeTimelineModel.setEntries(entries);
-
       homeTimelineRepository.updateModel(homeTimelineModel);
+      handleUnfollow(userId, blockedUserId);
     } else {
-      HomeTimelineModel newModel = initHomeTimeline(userId);
-      List<String> blockedUsers = newModel.getBlockedUsersId();
-      blockedUsers.add(blockedUserId);
-      newModel.setBlockedUsersId(blockedUsers);
-      homeTimelineRepository.create(newModel);
+      logger.error("user %s does not exist".formatted(userId));
     }
   }
 
@@ -230,8 +208,7 @@ public class HomeTimelineService {
       homeTimelineModel.setBlockedUsersId(blockedUsers);
       homeTimelineRepository.updateModel(homeTimelineModel);
     } else {
-      HomeTimelineModel newModel = initHomeTimeline(blockedUserId);
-      homeTimelineRepository.create(newModel);
+      logger.error("user %s does not exist".formatted(userId));
     }
   }
 
@@ -245,26 +222,47 @@ public class HomeTimelineService {
     String followerId = homeTimelinePostModel.get().getOwnerId();
     List<HomeTimelineModel> hometimelinesModel =
         homeTimelineRepository.getHomeTimelineContainingUserId(UserId, followerId);
+
+    if (hometimelinesModel.isEmpty()) {
+      logger.error("no home timeline found for post %s".formatted(postId));
+      return;
+    }
+
     HomeTimelinePostModel PostModel = homeTimelinePostModel.get();
     for (HomeTimelineModel homeTimelineModel : hometimelinesModel) {
       HomeTimelineEntity homeTimelineEntity =
           homeTimelineModelToEntity.convertNotNull(homeTimelineModel);
       List<HomeTimelineEntity.HomeTimelineEntryEntity> entries = homeTimelineEntity.getEntries();
-      List<HomeTimelineEntity.HomeTimelineLikedByEntity> likedBy = new ArrayList<>();
-      HomeTimelineEntity.HomeTimelineLikedByEntity likedByEntity =
-          new HomeTimelineEntity.HomeTimelineLikedByEntity()
-              .withUserId(UserId)
-              .withLikedAt(LocalDateTime.now());
-      likedBy.add(likedByEntity);
-      HomeTimelineEntity.HomeTimelineEntryEntity toAdd =
-          new HomeTimelineEntity.HomeTimelineEntryEntity()
-              .withPostId(postId)
-              .withAuthorId(PostModel.getOwnerId())
-              .withContent(PostModel.getText())
-              .withLikedBy(likedBy)
-              .withType(PostModel.getMedia())
-              .withTimestamp(LocalDateTime.now());
-      entries.add(toAdd);
+      boolean exists = false;
+      for (HomeTimelineEntity.HomeTimelineEntryEntity homeTimelineEntryEntity : entries) {
+        if (homeTimelineEntryEntity.getPostId().equals(postId)) {
+          List<HomeTimelineEntity.HomeTimelineLikedByEntity> newLikedBy =
+              homeTimelineEntryEntity.getLikedBy();
+          newLikedBy.add(
+              new HomeTimelineEntity.HomeTimelineLikedByEntity()
+                  .withLikedAt(LocalDateTime.now())
+                  .withUserId(UserId));
+          homeTimelineEntryEntity.setLikedBy(newLikedBy);
+          exists = true;
+        }
+      }
+      if (!exists) {
+        List<HomeTimelineEntity.HomeTimelineLikedByEntity> likedBy = new ArrayList<>();
+        HomeTimelineEntity.HomeTimelineLikedByEntity likedByEntity =
+            new HomeTimelineEntity.HomeTimelineLikedByEntity()
+                .withUserId(UserId)
+                .withLikedAt(LocalDateTime.now());
+        likedBy.add(likedByEntity);
+        HomeTimelineEntity.HomeTimelineEntryEntity newEntry =
+            new HomeTimelineEntity.HomeTimelineEntryEntity()
+                .withPostId(postId)
+                .withAuthorId(PostModel.getOwnerId())
+                .withContent(PostModel.getText())
+                .withLikedBy(likedBy)
+                .withType(PostModel.getMedia())
+                .withTimestamp(LocalDateTime.now());
+        entries.add(newEntry);
+      }
       homeTimelineEntity.setEntries(entries);
       homeTimelineRepository.updateModel(
           homeTimelineEnityToModel.convertNotNull(homeTimelineEntity));
@@ -274,6 +272,7 @@ public class HomeTimelineService {
   public void handleUnlike(String UserId, String postId) {
     List<HomeTimelineModel> homeTimelinesModel =
         homeTimelineRepository.getHomeTimelineContainingPostId(postId);
+
     for (HomeTimelineModel homeTimelineModel : homeTimelinesModel) {
       HomeTimelineEntity homeTimelineEntity =
           homeTimelineModelToEntity.convertNotNull(homeTimelineModel);
@@ -308,10 +307,9 @@ public class HomeTimelineService {
   }
 
   public void handleUserCreation(String userId) {
-    logger.info("received user creation for user %s".formatted(userId));
     Optional<HomeTimelineModel> homeTimeline = homeTimelineRepository.findByUserId(userId);
     if (homeTimeline.isPresent()) {
-      // FIXME handle error (it shouldn't happen)
+      logger.error("user %s already exists".formatted(userId));
     } else {
       homeTimelineRepository.create(initHomeTimeline(userId));
     }
